# sql-self-healing-agent

./: .env.example  .gitignore  README.md  pyproject.toml
mocks/events/: task_123_failed_round_1.json
mocks/metadata/: tables.json
mocks/scenarios/: real_sql_advertiser_iid.json  retry_exhausted_manual_required.json  similar_missing_column_with_memory.json  two_step_column_then_type.json
sql_self_healing_agent/: cli.py
sql_self_healing_agent/agent/: config.py  metrics.py
sql_self_healing_agent/artifacts/: artifact_store.py
sql_self_healing_agent/core/: atomic_io.py  enums.py  errors.py  models.py  (+2 more)
tests/: fakes.py  llm_test_adapter.py  test_agent_config.py  test_agent_models.py  test_agent_runner.py  test_agentic_failed_processor.py  test_ark_client.py  test_artifact_store_context.py  test_atomic_io.py  test_cli.py  test_context_manager.py  test_diagnosis.py  test_event_concurrency.py  test_event_key.py  test_event_recovery.py  test_execution_plan_validation.py  test_external_result_contracts.py  test_gate_runner.py  test_handle_upstream_event.py  test_hook_manager.py  test_llm_main_agent.py  test_llm_retry_hook.py  test_log_digest.py  test_memory_cli.py  test_memory_consolidator.py  test_memory_frontmatter.py  test_memory_m4.py  test_memory_store.py  test_metadata_provider.py  test_mock_upstream_event_runner.py  test_models.py  test_ollama_client.py  test_persistence_security_scan.py  test_planner_prompt.py  test_reflection.py  test_repair_planner.py  test_session_lock.py  test_session_store.py  test_subagent.py  test_success_current_candidate.py  (+4 more)
(+88 files in other folders)
