[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-self-healing-agent"
version = "0.1.0"
description = "Event-driven SQL Self-Healing Agent MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "sqlglot",
]

[project.scripts]
sql-heal = "sql_self_healing_agent.cli:main"

[tool.setuptools.packages.find]
include = ["sql_self_healing_agent*"]
